--- a/Homework2/Task-StudentGroup/Task-StudentGroup.vcxproj
+++ b/Homework2/Task-StudentGroup/Task-StudentGroup.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c1533680-d9d0-4e42-9c41-87af798f430f}</ProjectGuid>
-    <RootNamespace>TaskVector</RootNamespace>
+    <ProjectGuid>{a0e064f9-41b8-449f-a691-05b5c2a83c05}</ProjectGuid>
+    <RootNamespace>TaskStudentGroup</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="group.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Vector.cpp" />
+    <ClCompile Include="person.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Vector.h" />
+    <ClInclude Include="group.h" />
+    <ClInclude Include="person.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
