--- a/Homework2/Task-Template/Task-Template.vcxproj
+++ b/Homework2/Task-Template/Task-Template.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>17.0</VCProjectVersion>
+    <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a0e064f9-41b8-449f-a691-05b5c2a83c05}</ProjectGuid>
-    <RootNamespace>TaskStudentGroup</RootNamespace>
+    <ProjectGuid>{cb8cbb4c-feaa-4674-a1df-70aa415202bd}</ProjectGuid>
+    <RootNamespace>TaskTemplate</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,16 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="group.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="person.cpp" />
-    <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="group.h" />
-    <ClInclude Include="person.h" />
-    <ClInclude Include="TDate.h" />
-    <ClInclude Include="utility.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
