--- a/Homework2/Task-StudentGroup/Task-StudentGroup.vcxproj.filters
+++ b/Homework2/Task-StudentGroup/Task-StudentGroup.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="MyArr.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TDate.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="person.h">
