--- a/Homework2/Task-StudentGroup/Task-StudentGroup.vcxproj
+++ b/Homework2/Task-StudentGroup/Task-StudentGroup.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyArr.cpp" />
     <ClCompile Include="person.cpp" />
+    <ClCompile Include="TDate.cpp" />
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
